--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.172.0",
+    "three-mesh-bvh": "^0.8.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -32,5 +33,8 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
+  },
+  "overrides": {
+    "three-mesh-bvh": "^0.8.0"
   }
 }
