--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.172.0",
+    "three-mesh-bvh": "^0.8.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
