--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@jridgewell/set-array": "^1.2.1",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.12",
     "@react-three/rapier": "^1.5.0",
